<resources>
    <string name="app_name">My Traffic Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_name">University of Information Technology</string>
    <string name="server_client_id">945104725933-vh1vr0ht6e3j6kpsrknb407gki63q49s.apps.googleusercontent.com</string>
    <string name="search_title">Search...</string>
    <string name="search_hint">Search...</string>
    <string name="share">Share</string>
    <string name="settings">Setting</string>
    <string name="direction">Direction</string>
    <string name="map_style">CHOOSE MAP STYLE</string>
    <string name="sign_in">LOG IN</string>
    <string name="style_label_retro">Retro</string>
    <string name="style_label_night">night</string>
    <string name="style_label_gray_scale">Gray scale</string>
    <string name="style_label_default">Default</string>
    <string name="style_set_to">Style set to: %1$s</string>
    <string name="api_key">AIzaSyAPS6Wag9PVxxOxXfWuMdA9kZwKdsLkI2k</string>
    <string name="drawer_open">Menu open</string>
    <string name="drawer_close">Menu close</string>
    <string name="view_option">VIEW OPTION</string>
    <string name="fav_place">FAVORITE PLACES</string>
    <string name="share_app">SHARE</string>
    <string name="choose_style">Choose your map style</string>
    <string name="about_app">This is a map that help you find nearby places
    and show you the direction to that places... I will  write more later.</string>
    <string name="about">ABOUT</string>
    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Place detail:</string>
    <string name="clear_text">Clear Text</string>

    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>


    <!-- items of sliding menu -->
    <string-array name="items">
        <item>Airport</item>
        <item>Atm</item>
        <item>Bank</item>
        <item>Bar</item>
        <item>Cafe</item>
        <item>Church</item>
        <item>Food</item>
        <item>Hospital</item>
        <item>Hotel</item>
        <item>Library</item>
        <item>Police</item>
        <item>Supermarket</item>
        <item>Theatre</item>
    </string-array>

    <string-array name="compare">
        <item>airport</item>
        <item>atm</item>
        <item>bank</item>
        <item>bar</item>
        <item>cafe</item>
        <item>church</item>
        <item>food</item>
        <item>hospital</item>
        <item>hotel</item>
        <item>library</item>
        <item>police</item>
        <item>supermarket</item>
        <item>theatre</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <string name="title_activity_view_option">View Option</string>


</resources>
