<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/choose_style_map">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/style_retro"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/style_label_retro" />
    <item
        android:id="@+id/style_night"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/style_label_night" />
    <item
        android:id="@+id/style_gray_scale"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/style_label_gray_scale" />
    <item
        android:id="@+id/style_default"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/style_label_default" />
</group>

</menu>
