<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_1"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/map_style"
            android:icon="@drawable/drops"
            android:title="@string/map_style" />
        </group>
    <group
        android:id="@+id/menu_2"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/fav_place"
            android:icon="@drawable/star"
            android:title="@string/fav_place" />
        </group>
    <group
        android:id="@+id/menu_2_2"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/route_fav"
            android:icon="@drawable/compass_new_black"
            android:title="FAVORITE ROUTES" />
    </group>
    <group
        android:id="@+id/menu_3"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/view_option"
            android:icon="@drawable/options"
            android:title="@string/view_option" />
        </group>
    <group
        android:id="@+id/menu_4"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/share"
            android:icon="@drawable/share_ic"
            android:title="@string/share_app" />
        </group>
    <group
        android:id="@+id/menu_5"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/about"
            android:icon="@drawable/info"
            android:title="@string/about" />

    </group>
</menu>
